[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/EventLogScript.gd" type="Script" id=1]

[node name="EventLog" type="Control"]
margin_right = 350.0
margin_bottom = 120.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="EventLogContent" type="RichTextLabel" parent="VBoxContainer"]
margin_right = 350.0
margin_bottom = 92.0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
bbcode_text = "Hello [color=#adc]World[/color]"
scroll_following = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 96.0
margin_right = 350.0
margin_bottom = 120.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
visible = false
margin_top = 5.0
margin_right = 47.0
margin_bottom = 19.0
text = "[Player]"

[node name="EventLogInput" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_right = 350.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="text_entered" from="VBoxContainer/HBoxContainer/EventLogInput" to="." method="EventLogInputEntered"]
